data/derived/comb/progs/unify/prog5213.ml.out
Characters 97-101:
  | l   -> sepConcat ( ", " List.map(f l));;
                       ^^^^
Error: This expression has type string
       This is not a function; it cannot be applied.
